syntax = "proto3";
package bestia.messages;

import "messages/account.proto";
import "messages/chat.proto";
import "messages/inventory.proto";
import "messages/component.proto";

option java_package = "net.bestia.messages.proto";
option java_outer_classname = "MessageProtos";

message Wrapper {
    oneof payload {
        // SYSTEM & ACCOUNT
        AuthRequest auth_request = 1;
        AuthResponse auth_response = 2;
        AccountVarRequest account_var_request = 3;
        AccountVarResponse account_var_response = 4;
        ChatRequest chat_request = 5;
        ChatResponse chat_response = 6;

        // INVENTORY
        UseItem cmd_use_item = 100;
        DropItem cmd_drop_item = 101;
        PickupItem cmd_pickup_item = 102;

        // COMPONENTS
        PositionComponent comp_position = 300;
        TemperatureComponent comp_temperature = 301;

        // MISC
    }
}